# MCP

trading-mcp/: README.md  backtest.py  inspect_candle_data.py  inspect_smartapi.py  pyproject.toml  test_models.py  test_telegram.py
trading-mcp/docs/: IMPLEMENTATION.md
trading-mcp/src/agents/: news_agent.py  signal_agent.py  summary_agent.py  trading_agent.py
trading-mcp/src/api/: main.py
trading-mcp/src/broker/: client.py
trading-mcp/src/db/: models.py
trading-mcp/src/services/: news_service.py  trading_service.py
trading-mcp/utils/: email_notifier.py  telegram_notifier.py
